Fix the loading message for the javascript version to not break the non javascript version.

--- a/htdocs/views-js.css
+++ b/htdocs/views-js.css
@@ -9,3 +9,8 @@
 .blockinstance-header h4 {
     cursor: move;
 }
+
+/* This will be hidden until loading is finished */
+#bottom-pane {
+    display: none;
+}
